# GLOWv0982

./: .gitignore  Makefile.glowbasic  Makefile.glowbasic.gfort  Makefile.glowdriver  Todolist.txt  bands.f90  cglow.f90  egrid.f90  ephoto.f90  etrans.f90  exsect.f  gchem.f90  glow.f90  glowbasic.f90  in.basic.aur  in.basic.day  in.basic.proton  in.namelist  maxt.f90  meson.build  mzgrid.f90  out.basic.aur  out.basic.day  out.basic.proton  output.f90  qback.f90  rcolum.f90  readtgcm.f90  rout.f90  solzen.f90  ssflux.f90  tzgrid.f90
